--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Net-LDAP-AutoDNs
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
+0.0.1	2009-10-26/0:30
+		-Correct 'dhcp' and 'dns'.
+		-Correct removal of the last part of the hostname.
 
+0.0.0	2008-06-22
+		-Initial release.
