--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Net-LDAP-AutoDNs
 
+0.2.1	2010-05-26/07:40
+		-Correct spelling of methods in the config.
+		-Now only handles stuff for /dev/ldap/ if it can actually open the device.
+		-Now requires a /dev/ldap entry not be equal to "".
+
 0.2.0	2010-05-08/04:00
 		-Add EESDP compatibility.
 
